--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -12,75 +12,134 @@
     <link rel="stylesheet" href="../css/pagina.css">
 </head>
 <body>
+
     <!--navegador -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-celeste border-bottom">
+
         <div class="container-fluid">
+
             <img src="../images/Logo.png" alt="logo de uñas" width="170" height="120">
+
             <a class="navbar-brand cabeza" href="../index.html">Rosana Nails</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav justify-content-end w-100">
-                    <li class="nav-item">
-                        <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./galeriadeTrabajo.html">Galeria de trabajo</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./precio.html">Precio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./contacto.html">Contacto</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 
-    <div class="container-fluid">
+            </button>
+
+            <div class="collapse navbar-collapse" id="navbarNav">
+
+                <ul class="navbar-nav justify-content-end w-100">
+
+                    <li class="nav-item">
+
+                        <a class="nav-link" href="../index.html">Inicio</a>
+
+                    </li>
+
+                    <li class="nav-item">
+
+                        <a class="nav-link active" aria-current="page" href="./servicios.html">Servicios</a>
+
+                    </li>
+
+                    <li class="nav-item">
+
+                        <a class="nav-link" href="./galeriadeTrabajo.html">Galeria de trabajo</a>
+
+                    </li>
+
+                    <li class="nav-item">
+
+                        <a class="nav-link" href="./precio.html">Precio</a>
+
+                    </li>
+
+                    <li class="nav-item">
+
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+
+                    </li>
+
+                </ul>
+
+            </div>
+
+        </div>
+
+    </nav>
+    <!--fin navegador ----------------------------------------------------------------->
+
+<!-- inicio main -->
+
+    <main class="container-fluid">
+
+
         <h1>Diferentes servicios que brindamos</h1>
+
         <div class="col-12 col-md-12 flex-column flex-md-row tarjeta">
+
             <div class="card" style="width: 18rem;">
+
                 <img src="../images/semimanos.jpg" class="card-img-top" alt="Semimanos">
+
                 <div class="card-body">
+
                     <h2 class="card-title tarjetaTitulo">Semipermanente de Uñas</h2>
+
                         <p class="card-text">La manicura semipermanente es una técnica que mantiene las uñas pintadas perfectamente por un lapso bastante prolongado.
                     El esmaltado semipermanente es la alternativa perfecta para aquellas mujeres que tienen una vida muy ocupada y que
                     desean tener sus uñas impecables pero no cuentan con el tiempo necesario para asistir al manicurista con frecuencia.</p>
                 </div>
+
             </div>
+
             <div class="card" style="width: 18rem;">
+
                 <img src="../images/kapping.jpg" class="card-img-top" alt="Kapping">
+
                 <div class="card-body">
+
                     <h2 class="card-title tarjetaTitulo">Kapping Gel (recomendado)</h2>
+
                         <p class="card-text">
+
                         El Kapping consiste en aplicar una fina capa de acrílico o gel fortificador sobre la uña que actuará como una
                         barrera
                         protectora. A diferencia de las uñas esculpidas, este baño en gel kapping no alarga la uña natural sino que acompaña
                         el
                         crecimiento de la misma y dura hasta 20 días.</p>
+
                 </div>
+
             </div>
+
             <div class="card" style="width: 18rem;">
+
                 <img src="../images/pies.jpg" class="card-img-top" alt="Semipies">
+
                 <div class="card-body">
+
                     <h2 class="card-title tarjetaTitulo">Semipermanente de Pies</h2>
+
                         <p class="card-text">Se trata de un tipo depedicura que consigue mantener el color de nuestras uñas entre dos o tres semanas en perfectas
                         condiciones, sin
                         estropearse lo más mínimo. ¿Cómo se consigue? Todo es gracias a un gel acrílico que mezclado con el esmalte que
                         aplicamos en la uña y secado con rayos ultravioleta consigue endurecerlo más allá de los tiempos normales.</p>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <!-- footer -->
+                </div>
+
+            </div>
+
+        </div>
+
+    </main>
+<!-- fon main ------------------------------------------------------------------------------------------->
+
+    <!--inicio footer -->
 
     <footer class="container-fluid bg-celeste">
 
@@ -101,9 +160,13 @@
                     <h3>Redes Sociales</h3>
 
                     <div class="d-flex flex-row justify-content-around justify-content-md-evenly">
+
                         <a href="https://www.instagram.com/rosanacubilla.nails/?hles"><i class="bi-instagram"></i></a>
+
                         <a href="https://www.facebook.com/rosana.cubilla"><i class="bi-facebook"></i></a>
+
                         <a href="https://wa.me/5493445455590"><i class="bi-whatsapp"></i></a>
+
                     </div>
 
                 </div>
@@ -113,6 +176,7 @@
         </div>
 
     </footer>
+    <!--fin footer ------------------------------------------------------------------------->
 
     <script src="../js/bootstrap.min.js"></script>
 
