--- a/index.html
+++ b/index.html
@@ -19,63 +19,107 @@
 
    </main>
 
-      <!--navegador -->
+      <!--inicio navegador -->
+
       <nav class="navbar navbar-expand-lg navbar-light bg-celeste border-bottom">
+
          <div class="container">
+
             <img src="./images/Logo.png" alt="logo de uñas" width="170" height="120">
+
             <a class="navbar-brand cabeza" href="index.html">Rosana Nails</a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+
                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+
                <span class="navbar-toggler-icon"></span>
+
             </button>
 
             <div class="collapse navbar-collapse" id="navbarNav">
+
                <ul class="navbar-nav justify-content-end w-100">
+
                   <li class="nav-item">
+
                      <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
+
                   </li>
+
                   <li class="nav-item">
+
                      <a class="nav-link" href="./paginas/servicios.html">Servicios</a>
+
                   </li>
+
                   <li class="nav-item">
+
                      <a class="nav-link" href="./paginas/galeriadeTrabajo.html">Galeria de trabajo</a>
+
                   </li>
+
                   <li class="nav-item">
+
                      <a class="nav-link" href="./paginas/precio.html">Precio</a>
+
                   </li>
+
                   <li class="nav-item">
+
                      <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
+
                   </li>
+
                </ul>
+
             </div>
    
          </div>
       </nav>
+      <!-- fin navegador --------------------------------------------------->
 
-   <!-- Main -->
+   <!--inicio Main -->
    <main class="container">
+
       <section class="col-12 d-block">
+
          <div class=" comienzo mx-auto">
+
             <h1>Sobre nosotros</h1> 
+
             <p>Realizamos servicio de manicuria en la ciudad de Rosario del Tala. A cargo de la profesional Rosana Cubilla, donde encontraras lo mejor para tus uñas a un increible precio.
                Cualquier diseño que tengas en mente se puede realizar aqui en Rosana Nails.</p>
+
          </div>
+
       </section>
+
       <article>
+
             <div class="conocimiento mx-auto">
+
             <h2>Diplomas y Certificados</h2>
+
                <p>La profesional cuenta con certificacion en la realizacion de kapping gel, semipermanente de uñas, semipermanente de pies, entre otros.Si buscas mas informacion podes ver la pagina de <a href="paginas/servicios.html">Servicio</a> donde explicaremos con mas detalle que se realiza en el gabinete. </p>
             </div>
-            <div class="ubicacion mx-auto">
-               <h3>Ubicacion del gabinete</h3>
-                  <p>Nos encontramos en  la ciudad de Rosario del Tala, Entre Rios,en la calle Avenida Libertad 269 entre Almirante Brown y Nuestra señora del Rosario. Te dejamos nuestra ubicacion por google maps para que puedas ubicarte.</p>
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3372.5288653648445!2d-59.140606485129624!3d-32.29764254665831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b109975f505e4d%3A0xfbb78d6fbf7d0ecc!2sAv.%20Libertad%20269%2C%20Rosario%20del%20Tala%2C%20Entre%20R%C3%ADos!5e0!3m2!1ses!2sar!4v1631983659168!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="col-12"></iframe>
-            </div>
-         </article>
-   </main>
 
-   <!-- footer -->
+            <div class="ubicacion mx-auto">
+
+               <h3>Ubicacion del gabinete</h3>
+
+                  <p>Nos encontramos en  la ciudad de Rosario del Tala, Entre Rios,en la calle Avenida Libertad 269 entre Almirante Brown y Nuestra señora del Rosario. Te dejamos nuestra ubicacion por google maps para que puedas ubicarte.</p>
+
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3372.5288653648445!2d-59.140606485129624!3d-32.29764254665831!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b109975f505e4d%3A0xfbb78d6fbf7d0ecc!2sAv.%20Libertad%20269%2C%20Rosario%20del%20Tala%2C%20Entre%20R%C3%ADos!5e0!3m2!1ses!2sar!4v1631983659168!5m2!1ses!2sar" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" class="col-12"></iframe>
+
+            </div>
+
+         </article>
+
+   </main>
+   <!-- fin main ------------------------------------------------------------------->
+
+   <!--inicio footer -->
 
    <footer class="container-fluid bg-celeste">
 
@@ -94,10 +138,13 @@
             <div class="col-12 col-md-6">
 
                <h3>Redes Sociales</h3>
+
                <div class="d-flex flex-row justify-content-around justify-content-md-evenly">
 
                   <a href="https://www.instagram.com/rosanacubilla.nails/?hles"><i class="bi-instagram"></i></a>
+
                   <a href="https://www.facebook.com/rosana.cubilla"><i class="bi-facebook"></i></a>
+
                   <a href="https://wa.me/5493445455590"><i class="bi-whatsapp"></i></a>
 
                </div>
@@ -109,6 +156,7 @@
       </div>
 
    </footer>
+   <!--fin footer ---------------------------------------------------------------->
 
    <script src="./js/bootstrap.min.js"></script>
 </body>
