--- a/paginas/galeriadeTrabajo.html
+++ b/paginas/galeriadeTrabajo.html
@@ -14,77 +14,146 @@
 
 <body>
 
-    <!--navegador -->
+    <!--inicio navegador -->
+
     <nav class="navbar navbar-expand-lg navbar-light bg-celeste border-bottom">
+
         <div class="container-fluid">
+
             <img src="../images/Logo.png" alt="logo de uñas" width="170" height="120">
+
             <a class="navbar-brand cabeza" href="../index.html">Rosana Nails</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
+
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav justify-content-end w-100">
+
                     <li class="nav-item">
+
                         <a class="nav-link" href="../index.html">Inicio</a>
+
                     </li>
+
                     <li class="nav-item">
+
                         <a class="nav-link" href="./servicios.html">Servicios</a>
+
                     </li>
+
                     <li class="nav-item">
+
                         <a class="nav-link active" aria-current="page" href="./galeriadeTrabajo.html">Galeria de trabajo</a>
+
                     </li>
+
                     <li class="nav-item">
+
                         <a class="nav-link"  href="./precio.html">Precio</a>
+
                     </li>
+
                     <li class="nav-item">
+
                         <a class="nav-link" href="./contacto.html">Contacto</a>
+
                     </li>
+
                 </ul>
+
             </div>
+
         </div>
+
     </nav>
+    <!-- fin navegador --------------------------------------------------------------->
 
+    <main class="container">
     <h1>Fotos de Trabajos Realizados</h1>
-    <div class="galeria">
-        <p>Aqui te dejamos un video sobre una manera perfecta de pintar tus uñas</p>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/JNbUGCg3mRo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-    </div>
-    <!-- Carrusel -->
-        <h2>Estas son algunas fotos de trabajaos ralizados por nosotros:
-        </h2>
-            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
-                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
-                </div>
-                <div class="carousel-inner espacio">
-                    <div class="carousel-item active">
-                        <img src="../images/trabajo.jpg" class="d-block w-25" alt="unas1">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../images/trabajo (2).jpg" class="d-block w-25" alt="unas2">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../images/trabajo (3).jpg" class="d-block w-25" alt="unas3">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../images/carousel4.jpg" class="d-block w-25" alt="unas4">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../images/carousel5.jpg" class="d-block w-25" alt="unas5">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="../images/carousel6.jpg" class="d-block w-25 " alt="unas6">
-                    </div>
-                </div>
-            </div>
 
-    <!-- footer -->
+    <div class="galeria">
+
+        <p>Aqui te dejamos un video sobre una manera perfecta de pintar tus uñas</p>
+
+        <iframe class="col-12 col-md-6" width="560" height="315" src="https://www.youtube.com/embed/JNbUGCg3mRo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+    </div>
+
+    <!--inicio Carrusel -->
+
+        <h2>Estas son algunas fotos de trabajaos ralizados por nosotros:</h2>
+
+            <div id="carouselExampleDark" class="carousel carousel-dark slide espacioGaleria" data-bs-ride="carousel">
+
+                <div class="carousel-indicators">
+
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="3" aria-label="Slide 4"></button>
+
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="4" aria-label="Slide 5"></button>
+
+                    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="5" aria-label="Slide 6"></button>
+
+                </div>
+
+                <div class="carousel-inner espacio">
+
+                    <div class="carousel-item active">
+
+                        <img src="../images/trabajo.jpg" class="d-block w-50" alt="unas1">
+
+                    </div>
+
+                    <div class="carousel-item">
+
+                        <img src="../images/trabajo (2).jpg" class="d-block w-50" alt="unas2">
+
+                    </div>
+
+                    <div class="carousel-item">
+
+                        <img src="../images/trabajo (3).jpg" class="d-block w-50" alt="unas3">
+
+                    </div>
+
+                    <div class="carousel-item">
+
+                        <img src="../images/carousel4.jpg" class="d-block w-50" alt="unas4">
+
+                    </div>
+
+                    <div class="carousel-item">
+
+                        <img src="../images/carousel5.jpg" class="d-block w-50" alt="unas5">
+
+                    </div>
+
+                    <div class="carousel-item">
+
+                        <img src="../images/carousel6.jpg" class="d-block w-50" alt="unas6">
+
+                    </div>
+
+                </div>
+
+            </div>
+        <!--fin carousel  --------------------------------------------------------------->
+
+        </main>
+        <!--fin main --------------------------------------------------------------------->
+
+    <!--inicio footer -->
 
     <footer class="container-fluid bg-celeste">
 
@@ -93,8 +162,11 @@
             <div class="row">
 
                 <div class="col-12 col-md-6 footerTexto">
+
                     <p>Rosana Cubilla 2021</p>
+
                     <p>Cubidero@hotmail.com</p>
+
                 </div>
 
                 <div class="col-12 col-md-6">
@@ -102,9 +174,13 @@
                     <h3>Redes Sociales</h3>
 
                     <div class="d-flex flex-row justify-content-around justify-content-md-evenly">
+
                         <a href="https://www.instagram.com/rosanacubilla.nails/?hles"><i class="bi-instagram"></i></a>
+
                         <a href="https://www.facebook.com/rosana.cubilla"><i class="bi-facebook"></i></a>
+
                         <a href="https://wa.me/5493445455590"><i class="bi-whatsapp"></i></a>
+
                     </div>
 
                 </div>
@@ -114,6 +190,7 @@
         </div>
 
     </footer>
+    <!-- fin footer ------------------------------------------------------------------------------>
 
     <script src="../js/bootstrap.min.js"></script>
 
