--- a/paginas/precio.html
+++ b/paginas/precio.html
@@ -17,71 +17,135 @@
 
     <!--navegador -->
     <nav class="navbar navbar-expand-lg navbar-light bg-celeste border-bottom">
+
         <div class="container-fluid">
+
             <img src="../images/Logo.png" alt="logo de uñas" width="170" height="120">
+
             <a class="navbar-brand cabeza" href="../index.html">Rosana Nails</a>
+
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
+
             </button>
+
             <div class="collapse navbar-collapse" id="navbarNav">
+
                 <ul class="navbar-nav justify-content-end w-100">
+
                     <li class="nav-item">
+
                         <a class="nav-link" href="../index.html">Inicio</a>
+
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link"  href="./servicios.html">Servicios</a>
+
+                        <a class="nav-link" href="./servicios.html">Servicios</a>
+
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link" href="./galeriadeTrabajo.html">Galeria de trabajo</a>
+
+                        <a class="nav-link"  href="./galeriadeTrabajo.html">Galeria de trabajo</a>
+
                     </li>
+
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="./precio.html">Precio</a>
+
+                        <a class="nav-link active" aria-current="page"  href="./precio.html">Precio</a>
+
                     </li>
+
                     <li class="nav-item">
+
                         <a class="nav-link" href="./contacto.html">Contacto</a>
+
                     </li>
+
                 </ul>
+
             </div>
+
         </div>
+
     </nav>
+    <!-- fin navegador ------------------------------------------------------------------------->
+
     <main class="container">
+
         <h1>Precio sobre nuestro Servicio</h1>
+
             <div class="row">
+
                 <div class="col-12  col-sm-4">
+
                     <div class="card">
+
                         <div class="card-body">
+
                             <h2 class="card-title">Semipermante de uñas</h2>
+
                             <p class="card-text">Este servicio cuesta $500, si queres saber de que trata pulsa el boton de abajo.</p>
+
                             <a href="./servicios.html" class="btn btn-primary">Servicios</a>
+
                         </div>
+
                     </div>
+
                 </div>
+
                 <div class="col-12 col-sm-4">
+
                     <div class="card">
+
                         <div class="card-body">
+
                             <h2 class="card-title">Kapping gel</h2>
+
                             <p class="card-text">Este servicio cuesta $700, si queres saber de que trata pulsa el boton de abajo.</p>
+
                             <a href="./servicios.html" class="btn btn-primary">Servicios</a>
+
                         </div>
+
                     </div>
+
                 </div>
+
                 <div class="col-12 col-sm-4">
+
                     <div class="card">
+
                         <div class="card-body">
+
                             <h2 class="card-title">Semipermante de Pies</h2>
+
                             <p class="card-text">Este servicio cuesta $900, si queres saber de que trata pulsa el boton de abajo.</p>
+
                             <a href="./servicios.html" class="btn btn-primary">Servicios</a>
+
                         </div>
+
                     </div>
+
                 </div>
+
             </div>
+
             <h3>Actualizacion de precios</h3>
+
                 <p>Debido a la inflacion que sufre Argentina nos vemos obligado a aumentar nuestros precios
                 cada vez que se desvaloriza nuestra moneda. Pero no se preocupen siempre pueden fijarse en nuestras
                 redes sociales por promociones o cupones para conseguir el mejor precio en su proxima consulta.</p>
-    </main>
 
+    </main>
+    <!--fin main --------------------------------------------------------->
+
+    <!--Inicio Footer -->
     <footer class="container-fluid bg-celeste">
 
         <div class=" col-12 container border-bottom">
@@ -101,9 +165,13 @@
                     <h3>Redes Sociales</h3>
 
                     <div class="d-flex flex-row justify-content-around justify-content-md-evenly">
+
                         <a href="https://www.instagram.com/rosanacubilla.nails/?hles"><i class="bi-instagram"></i></a>
+
                         <a href="https://www.facebook.com/rosana.cubilla"><i class="bi-facebook"></i></a>
+
                         <a href="https://wa.me/5493445455590"><i class="bi-whatsapp"></i></a>
+
                     </div>
 
                 </div>
@@ -113,6 +181,7 @@
         </div>
 
     </footer>
+    <!--fin footer ---------------------------------------------------------------------->
 
     <script src="../js/bootstrap.min.js"></script>
 
