--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <!-- fin navegador --------------------------------------------------->
 
    <!--inicio Main -->
-   <main class="container">
+   <main class="container-fluid">
 
       <section class="col-12 d-block">
 
