--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
       <nav class="navbar navbar-expand-lg navbar-light bg-celeste border-bottom">
 
-         <div class="container">
+         <div class="container-fluid">
 
             <img src="./images/Logo.png" alt="logo de uñas" width="170" height="120">
 
@@ -80,7 +80,7 @@
       <!-- fin navegador --------------------------------------------------->
 
    <!--inicio Main -->
-   <main class="container-fluid">
+   <main class="container">
 
       <section class="col-12 d-block">
 
