--- a/paginas/galeriadeTrabajo.html
+++ b/paginas/galeriadeTrabajo.html
@@ -7,6 +7,7 @@
     <meta name="description" content="Aqui podras ver fotos, videos y diseños sobre nuestro trabajo">
     <meta name="keywords" content="Uñas, Kapping, Semipermanente,Rosana ,Nails, Tala, Manos, Pies, Servicios, Fotos, Videos, Trabajo">
     <title>Galeria De Trabajos</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/pagina.css">
@@ -193,6 +194,7 @@
     <!-- fin footer ------------------------------------------------------------------------------>
 
     <script src="../js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 </body>
 
