--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -7,6 +7,7 @@
     <meta name="description" content="En esta seccion veras lo que ofrecemos para el cuidado de tus uñas y pies">
     <meta name="keywords" content="Uñas, Kapping, Semipermanente,Rosana ,Nails, Tala, Manos, Pies, Servicios">
     <title>Servicios</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="../css/pagina.css">
@@ -82,7 +83,7 @@
 
         <div class="col-12 col-md-12 flex-column flex-md-row tarjeta">
 
-            <div class="card" style="width: 18rem;">
+            <div data-aos="flip-left"  class="card" style="width: 18rem;">
 
                 <img src="../images/semimanos.jpg" class="card-img-top" alt="Semimanos">
 
@@ -97,7 +98,7 @@
 
             </div>
 
-            <div class="card" style="width: 18rem;">
+            <div data-aos="zoom-in" class="card" style="width: 18rem;">
 
                 <img src="../images/kapping.jpg" class="card-img-top" alt="Kapping">
 
@@ -117,7 +118,7 @@
 
             </div>
 
-            <div class="card" style="width: 18rem;">
+            <div data-aos="flip-right" class="card" style="width: 18rem;">
 
                 <img src="../images/pies.jpg" class="card-img-top" alt="Semipies">
 
@@ -137,7 +138,7 @@
         </div>
 
     </main>
-<!-- fon main ------------------------------------------------------------------------------------------->
+<!-- fin main ------------------------------------------------------------------------------------------->
 
     <!--inicio footer -->
 
@@ -179,6 +180,10 @@
     <!--fin footer ------------------------------------------------------------------------->
 
     <script src="../js/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 
 </body>
 
