--- a/paginas/galeriadeTrabajo.html
+++ b/paginas/galeriadeTrabajo.html
@@ -80,7 +80,7 @@
 
     <div class="galeria">
 
-        <p>Aqui te dejamos un video sobre una manera perfecta de pintar tus uñas</p>
+        <h2>Aqui te dejamos un video sobre una manera perfecta de pintar tus uñas</h2>
 
         <iframe class="col-12 col-md-6" width="560" height="315" src="https://www.youtube.com/embed/JNbUGCg3mRo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -88,7 +88,7 @@
 
     <!--inicio Carrusel -->
 
-        <h2>Estas son algunas fotos de trabajaos ralizados por nosotros:</h2>
+        <h3>Estas son algunas fotos de trabajaos ralizados por nosotros:</h3>
 
             <div id="carouselExampleDark" class="carousel carousel-dark slide espacioGaleria" data-bs-ride="carousel">
 
