--- a/paginas/precio.html
+++ b/paginas/precio.html
@@ -82,9 +82,9 @@
 
         <h1>Precio sobre nuestro Servicio</h1>
 
-            <div class="row">
+            <div class="row separador">
 
-                <div class="col-12  col-sm-4">
+                <div class="col-12  col-sm-4 col-lg-4">
 
                     <div class="card">
 
@@ -102,7 +102,7 @@
 
                 </div>
 
-                <div class="col-12 col-sm-4">
+                <div class="col-12 col-sm-4 col-lg-4">
 
                     <div class="card">
 
@@ -120,7 +120,7 @@
 
                 </div>
 
-                <div class="col-12 col-sm-4">
+                <div class="col-12 col-sm-4 ">
 
                     <div class="card">
 
@@ -147,9 +147,9 @@
                 redes sociales o aqui abajo por promociones o cupones para conseguir el mejor precio en su proxima consulta.</p>
 
             <article>
-                <div class="promocion">
+                <div class="promocion ">
 
-                    <div class="col-12  col-sm-4 col-lg-6">
+                    <div class="col-12  col-sm-4 ">
     
                         <div class="card">
     
