--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -83,7 +83,7 @@
 
         <div class="col-12 col-md-12 flex-column flex-md-row tarjeta">
 
-            <div data-aos="flip-left"  class="card" style="width: 18rem;">
+            <div data-aos="flip-left"  class="card separarTarjetas" style="width: 18rem;">
 
                 <img src="../images/semimanos.jpg" class="card-img-top" alt="Semimanos">
 
@@ -98,7 +98,7 @@
 
             </div>
 
-            <div data-aos="zoom-in" class="card" style="width: 18rem;">
+            <div data-aos="zoom-in" class="card separarTarjetas" style="width: 18rem;">
 
                 <img src="../images/kapping.jpg" class="card-img-top" alt="Kapping">
 
@@ -118,7 +118,7 @@
 
             </div>
 
-            <div data-aos="flip-right" class="card" style="width: 18rem;">
+            <div data-aos="flip-right" class="card separarTarjetas" style="width: 18rem;">
 
                 <img src="../images/pies.jpg" class="card-img-top" alt="Semipies">
 
