--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -91,7 +91,7 @@
 
                     <h2 class="card-title tarjetaTitulo">Semipermanente de Uñas</h2>
 
-                        <p class="card-text">La manicura semipermanente es una técnica que mantiene las uñas pintadas perfectamente por un lapso bastante prolongado.
+                        <p class="card-text textoDeLasTarjetas">La manicura semipermanente es una técnica que mantiene las uñas pintadas perfectamente por un lapso bastante prolongado.
                     El esmaltado semipermanente es la alternativa perfecta para aquellas mujeres que tienen una vida muy ocupada y que
                     desean tener sus uñas impecables pero no cuentan con el tiempo necesario para asistir al manicurista con frecuencia.</p>
                 </div>
@@ -106,7 +106,7 @@
 
                     <h2 class="card-title tarjetaTitulo">Kapping Gel (recomendado)</h2>
 
-                        <p class="card-text">
+                        <p class="card-text textoDeLasTarjetas">
 
                         El Kapping consiste en aplicar una fina capa de acrílico o gel fortificador sobre la uña que actuará como una
                         barrera
@@ -126,7 +126,7 @@
 
                     <h2 class="card-title tarjetaTitulo">Semipermanente de Pies</h2>
 
-                        <p class="card-text">Se trata de un tipo depedicura que consigue mantener el color de nuestras uñas entre dos o tres semanas en perfectas
+                        <p class="card-text textoDeLasTarjetas">Se trata de un tipo depedicura que consigue mantener el color de nuestras uñas entre dos o tres semanas en perfectas
                         condiciones, sin
                         estropearse lo más mínimo. ¿Cómo se consigue? Todo es gracias a un gel acrílico que mezclado con el esmalte que
                         aplicamos en la uña y secado con rayos ultravioleta consigue endurecerlo más allá de los tiempos normales.</p>
