cartas de servicios

--- a/paginas/precio.html
+++ b/paginas/precio.html
@@ -108,7 +108,7 @@
 
                         <div class="card-body">
 
-                            <h2 class="card-title">Kapping gel</h2>
+                            <h2 class="card-title">Kapping gel (recomendado)</h2>
 
                             <p class="card-text">Este servicio cuesta $700, si queres saber de que trata pulsa el boton de abajo.</p>
 
