--- a/paginas/servicios.html
+++ b/paginas/servicios.html
@@ -112,7 +112,8 @@
                         barrera
                         protectora. A diferencia de las uñas esculpidas, este baño en gel kapping no alarga la uña natural sino que acompaña
                         el
-                        crecimiento de la misma y dura hasta 20 días.</p>
+                        crecimiento de la misma y dura hasta 20 días, Dejanlo mas resistente y fuerte contra rompeduras o quebramientos y mas hermosa
+                        a la hora de tratarla.</p>
 
                 </div>
 
@@ -129,7 +130,7 @@
                         <p class="card-text textoDeLasTarjetas">Se trata de un tipo depedicura que consigue mantener el color de nuestras uñas entre dos o tres semanas en perfectas
                         condiciones, sin
                         estropearse lo más mínimo. ¿Cómo se consigue? Todo es gracias a un gel acrílico que mezclado con el esmalte que
-                        aplicamos en la uña y secado con rayos ultravioleta consigue endurecerlo más allá de los tiempos normales.</p>
+                        aplicamos en la uña y secado con rayos ultravioleta consigue endurecerlo más allá de los tiempos normales, pruebalo.</p>
 
                 </div>
 
