--- a/paginas/precio.html
+++ b/paginas/precio.html
@@ -84,7 +84,7 @@
 
             <div class="row separador">
 
-                <div class="col-12  col-sm-4 col-lg-4">
+                <div class="col-12  col-md-6 col-lg-4">
 
                     <div class="card">
 
@@ -102,7 +102,7 @@
 
                 </div>
 
-                <div class="col-12 col-sm-4 col-lg-4">
+                <div class="col-12 col-md-6 col-lg-4">
 
                     <div class="card">
 
@@ -120,7 +120,7 @@
 
                 </div>
 
-                <div class="col-12 col-sm-4 ">
+                <div class="col-12 col-md-12 col-lg-4 ">
 
                     <div class="card">
 
